# enum-kinds

./: Cargo.toml  README.md  bitbucket-pipelines.yml
enum-kinds/: Cargo.toml  README.md
enum-kinds-macros/: Cargo.toml  README.md
enum-kinds-macros/src/: lib.rs
enum-kinds-macros/tests/: kinds.rs
enum-kinds-traits/: Cargo.toml
enum-kinds-traits/src/: lib.rs
enum-kinds/src/: lib.rs
enum-kinds/tests/: kinds.rs
