[package]
name = "enum-kinds-macros"
version = "0.1.0"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
homepage = "https://bitbucket.org/Soft/enum-kinds/src"
description = "Macros for deriving enums that represent enum variants."
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[dev-dependencies]
enum-kinds-traits = { path = "../enum-kinds-traits" }
