[package]
name = "enum-kinds-macros"
version = "0.1.0"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
homepage = "https://bitbucket.org/Soft/enum-kinds"
repository = "https://bitbucket.org/Soft/enum-kinds"
description = "Macros for deriving enums that represent enum variants."
readme = "README.md"
license = "MIT"
keywords = ["macro", "enum", "derive"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11"
quote = "0.3"

[dev-dependencies]
enum-kinds-traits = { path = "../enum-kinds-traits", version = "0.1.0" }
