[package]
name = "enum-kinds-macros"
version = "0.2.1"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
homepage = "https://bitbucket.org/Soft/enum-kinds"
repository = "https://bitbucket.org/Soft/enum-kinds"
description = "Deprecated in favor of the enum-kinds crate. Generate enums with matching variants but without any of the associated data. enum-kinds-traits crate contains trait definitions used by this crate."
readme = "README.md"
license = "MIT"
keywords = ["macro", "enum", "derive", "proc-macro", "deriving"]

[lib]
proc-macro = true

[dependencies]
syn = "0.12.13"
quote = "0.4.2"

[dev-dependencies]
enum-kinds-traits = { path = "../enum-kinds-traits", version = "0.1.1" }

[badges]
maintenance = { status = "deprecated" }