[package]
name = "enum-kinds"
version = "0.5.0"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
homepage = "https://github.com/Soft/enum-kinds"
repository = "https://github.com/Soft/enum-kinds"
description = "Generate enums with matching variants but without any of the associated data."
readme = "README.md"
license = "MIT"
keywords = ["macro", "enum", "derive", "proc-macro", "deriving"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.3"

[dev-dependencies]
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.10"

[features]
default = []
no-stdlib = []

[badges]
travis-ci = { repository = "Soft/enum-kinds" }
